streams v2